# glidersim

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  Airfoil.py  BrakeGeometry.py  Glider.py  Harness.py  LICENSE.txt  MANIFEST.in  Parafoil.py  ParafoilGeometry.py  Paraglider.py  ParagliderWing.py  README.rst  TODO.md  TODO.rst  Wing.py  WingGeometry.py  WingSim.py  belloc.py  build_polars.py  design.html  flat_wings.py  foil.py  genindex.html  hook3.py  index.html  introduction.html  main.py  objects.inv  paraglider_wing.py  plot_braking_wing.py  plots.py  py-modindex.html  pyproject.toml  quaternion.py  reference.html  requirements-dev.txt  requirements.txt  (+9 more)
_autosummary/: pfh.glidersim.airfoil.html  pfh.glidersim.extras.airfoils.html  pfh.glidersim.extras.compute_polars.html  pfh.glidersim.extras.plots.html  pfh.glidersim.extras.simulation.html  pfh.glidersim.extras.wings.html  pfh.glidersim.foil.html  pfh.glidersim.foil_aerodynamics.html  pfh.glidersim.foil_layout.html  pfh.glidersim.foil_sections.html  pfh.glidersim.orientation.html  pfh.glidersim.paraglider.html  pfh.glidersim.paraglider_harness.html  pfh.glidersim.paraglider_wing.html  pfh.glidersim.simulator.html
_sources/: design.rst.txt  reference.rst.txt
_sources/_autosummary/: pfh.glidersim.airfoil.rst.txt  pfh.glidersim.extras.airfoils.rst.txt  pfh.glidersim.extras.compute_polars.rst.txt  pfh.glidersim.extras.plots.rst.txt  pfh.glidersim.extras.simulation.rst.txt  pfh.glidersim.extras.wings.rst.txt  pfh.glidersim.foil.rst.txt  pfh.glidersim.foil_aerodynamics.rst.txt  pfh.glidersim.foil_layout.rst.txt  pfh.glidersim.foil_sections.rst.txt  pfh.glidersim.orientation.rst.txt  pfh.glidersim.paraglider.rst.txt  pfh.glidersim.paraglider_harness.rst.txt  pfh.glidersim.paraglider_wing.rst.txt  pfh.glidersim.simulator.rst.txt
docs/: Makefile
docs/source/: conf.py  design.rst  index.rst  introduction.rst  reference.rst  usage.rst
docs/source/_templates/: page.html
pfh/glidersim/: __init__.py  foil.py  paraglider.py  paraglider_wing.py  quaternion.py
resources/XFLR5_projects/: NACA23015_N5.0.xfl  braking_NACA24018_Xtr0.25.xfl  braking_NACA24018_Xtr1.0.xfl
scripts/: animate_airfoil_interpolation.py  animate_foils.py  belloc.py  build_hook3.py  build_mescal6.py  convert_xflr5_coefs_to_grid.py  example_simulation.py  flat_wings.py  hook3.py  load_as_airfoils.py  mean_camber_approximation.py  plot_braking_wing.py  ribs.py  sim_work.py  test_hook3.py  test_sim.py  validate_inertia_calculations.py
scripts/polars/NACA23015_N0.1/: NACA 23015_T1_Re0.200_M0.00_N0.1.txt  NACA 23015_T1_Re0.250_M0.00_N0.1.txt  NACA 23015_T1_Re0.300_M0.00_N0.1.txt  NACA 23015_T1_Re0.350_M0.00_N0.1.txt  NACA 23015_T1_Re0.400_M0.00_N0.1.txt  NACA 23015_T1_Re0.450_M0.00_N0.1.txt  NACA 23015_T1_Re0.500_M0.00_N0.1.txt  NACA 23015_T1_Re0.750_M0.00_N0.1.txt  NACA 23015_T1_Re1.000_M0.00_N0.1.txt  NACA 23015_T1_Re1.250_M0.00_N0.1.txt  NACA 23015_T1_Re1.500_M0.00_N0.1.txt  NACA 23015_T1_Re1.750_M0.00_N0.1.txt  NACA 23015_T1_Re2.000_M0.00_N0.1.txt  NACA 23015_T1_Re2.500_M0.00_N0.1.txt  NACA 23015_T1_Re3.000_M0.00_N0.1.txt  NACA 23015_T1_Re3.500_M0.00_N0.1.txt  NACA 23015_T1_Re4.000_M0.00_N0.1.txt  naca23015_n01.xfl
scripts/polars/NACA23015_N1.0/: NACA 23015_T1_Re0.200_M0.00_N1.0.txt  NACA 23015_T1_Re0.250_M0.00_N1.0.txt  NACA 23015_T1_Re0.300_M0.00_N1.0.txt  NACA 23015_T1_Re0.350_M0.00_N1.0.txt  NACA 23015_T1_Re0.400_M0.00_N1.0.txt  NACA 23015_T1_Re0.450_M0.00_N1.0.txt  NACA 23015_T1_Re0.500_M0.00_N1.0.txt  NACA 23015_T1_Re0.600_M0.00_N1.0.txt  NACA 23015_T1_Re0.700_M0.00_N1.0.txt  NACA 23015_T1_Re0.800_M0.00_N1.0.txt  NACA 23015_T1_Re0.900_M0.00_N1.0.txt  NACA 23015_T1_Re1.000_M0.00_N1.0.txt  NACA 23015_T1_Re1.100_M0.00_N1.0.txt  NACA 23015_T1_Re1.200_M0.00_N1.0.txt  NACA 23015_T1_Re1.300_M0.00_N1.0.txt  NACA 23015_T1_Re1.400_M0.00_N1.0.txt  NACA 23015_T1_Re1.500_M0.00_N1.0.txt  NACA 23015_T1_Re1.750_M0.00_N1.0.txt  naca23015_n1.xfl  (+6 more)
tests/: test_paraglider_harness.py
(+387 files in other folders)
