[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pfh.glidersim"
version = "0.5.0"
description = "Paraglider simulation using non-linear dynamics."
authors = ["Peter Heatwole <pfheatwole@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/pfheatwole/glidersim"
packages = [
    { include = "pfh/glidersim", from = "src" },
]
include = [
    "src/pfh/glidersim/extras/airfoil_polars",
]

[tool.poetry.dependencies]
python = "^3.7,<3.9"
numpy = "^1.19.4"
scipy = "^1.6.0"
numba = "^0.52.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-commas = "^2.0.0"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-rst-docstrings = "^0.0.14"
