[build-system]
requires = ["setuptools>=51", "wheel", "setuptools_scm[toml]>=6"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
lines_after_imports = 2
profile = "black"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = "venv"

allow_redefinition = true  # Redefine arguments with `np.asarray`, `np.broadcast_arrays`, etc
ignore_missing_imports = true
warn_return_any = true

[tool.setuptools_scm]
write_to = "src/pfh/glidersim/_version.py"
