[build-system]
requires = ["setuptools>=51", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.isort]
lines_after_imports = 2
profile = "black"
skip_glob = ["scripts/*"]

[tool.mypy]
python_version = "3.8"
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = ".venv"

show_error_codes = true
allow_redefinition = true  # Redefine arguments with `np.asarray`, `np.broadcast_arrays`, etc
ignore_missing_imports = true
warn_return_any = true

[tool.setuptools_scm]
write_to = "src/pfh/glidersim/_version.py"
