[metadata]
name = pfh_glidersim
url = https://github.com/pfheatwole/glidersim
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir=
    =src
packages = pfh.glidersim
python_requires = ~=3.6
