[metadata]
name = pfh.glidersim
description = A library for paraglider dynamics modeling and simulation
long_description = file:README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.txt
author = Peter Heatwole
author_email = pfheatwole@gmail.com
url = https://github.com/pfheatwole/glidersim
project_urls =
    Documentation = https://pfheatwole.github.io/glidersim
    Discussions = https://github.com/pfheatwole/glidersim/discussions
    Issue Tracker = https://github.com/pfheatwole/glidersim/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.8
install_requires =
    numpy >= 1.20
    scipy
    numba >= 0.54
    matplotlib

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    flake8-bugbear
    flake8-comprehensions
    flake8-docstrings
    flake8-isort
    flake8-rst-docstrings
    isort
    pre-commit
    mypy
    Sphinx
    sphinx-rtd-theme
    numpydoc
